k8s/meta/kube-resource-report/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    application: kube-resource-report
  name: kube-resource-report
spec:
  rules:
  - host: kube-resource-report.${HOSTNAME}.k8s.o12stack.org
    http:
      paths:
      - backend:
          serviceName: kube-resource-report
          servicePort: web
